--- a/es6/index.html
+++ b/es6/index.html
@@ -28,21 +28,24 @@
                 <a class="x">X</a>
                 <form id="recordForm">
                     <div id="category-container">
-                        <label for="category">Category</label><br />
+                        <label for="category">Category</label>
                         <select class="form-input" name="category" id="category"></select>
                     </div>
                     <div id="item-container">
-                        <label for="item">Item</label><br />
+                        <label for="item">Item</label>
                         <select class="form-input" name="item" id="item"></select>
+                        <span class="error hidden" id="item-error">Item already added</span>
                     </div>
                     <div class="flex">
                         <div>
-                            <label for="count">Count</label><br />
+                            <label for="count">Count</label>
                             <input type="number" name="count" id="count" class="form-input"/>
+                            <span class="error hidden" id="count-error">Count must be numeric</span>
                         </div>
                         <div>
-                            <label for="price">Price</label><br />
+                            <label for="price">Price</label>
                             <input type="number" name="price" id="price" class="form-input"/>
+                            <span class="error hidden" id="price-error">Price must be numeric</span>
                         </div>
                     </div>
                     <div>
