--- a/htmx/index.html
+++ b/htmx/index.html
@@ -6,17 +6,26 @@
         <title>HTMX Test</title>
         <script src="htmx.min.js"></script>
         <script>
-            function validate(key) {
-                let value = document.getElementById(key).value;
-                if ((key == 'price' || key == 'count') && !value.match(/[0-9]+/g)) {
-                    document.getElementById(key + '-error').classList.remove('hidden');
+            function addRecord() {
+                let errors = 0, values = {'price':'', 'count':'', 'item':'', 'category':''}; 
+                htmx.findAll('.error').forEach((e) => htmx.addClass(e, 'hidden'))
 
+                for(key in values) {
+                    values[key] = htmx.find('#' + key).value;
+                    if ((key == 'price' || key == 'count') && !values[key].match(/[0-9]+/g)) {
+                        htmx.removeClass(`#${key}-error`, 'hidden');
+                        errors++;
+                    }
+                    else if(key == 'item' && document.querySelector(`input[name="${values[key]}"]`) != null) {
+                        htmx.removeClass(`#${key}-error`, 'hidden');
+                        errors++;
+                    }
                 }
-                else if(key == 'item' && document.querySelector(`input[name="${value}"]`) != null) {
-                    console.log(document.querySelector(`input[name="${value}"]`))
-                    document.getElementById(key + '-error').classList.remove('hidden');
 
-                }
+                if (errors == 0) {
+                    htmx.ajax('POST', '/records', {values :values ,target :'#records'})
+                    htmx.toggleClass(htmx.find('.modal'),'hidden');
+                }              
             }
         </script>
         <link rel="stylesheet" type="text/css" href="main.css">
@@ -35,24 +44,24 @@
             <div class="modal-body">
                 <h2>Add Item</h2>
                 <a hx-on:click="htmx.toggleClass(htmx.find('.modal'),'hidden')" class="x">X</a>
-                <form>
+                <form id="recordForm">
                     <div id="category-container" hx-get="/categories" hx-trigger="load"></div>
                     <div id="item-container" hx-get="/items?category=100" hx-trigger="load"></div>
                     <div class="flex">
                         <div>
                             <label for="count">Count</label>
-                            <input type="number" name="count" id="count" required class="form-input" hx-on:htmx:validation:validate="validate('count')"/>
+                            <input type="number" name="count" id="count" class="form-input" />
                             <span class="error hidden" id="count-error">Count must be numeric</span>
                         </div>
                         <div>
                             <label for="price">Price</label>
-                            <input type="number" name="price" id="price" required class="form-input" hx-on:htmx:validation:validate="validate('price')"/>
+                            <input type="number" name="price" id="price" class="form-input" />
                             <span class="error hidden" id="price-error">Price must be numeric</span>
                         </div>
                     </div>
                     <div>
                         <br />
-                        <input type="button" value="Add Item" hx-post="/records" hx-target="#records"  hx-validate="true" /> <!--hx-on:click="htmx.toggleClass(htmx.find('.modal'),'hidden')" /> -->
+                        <input type="button" value="Add Item" hx-on:click="addRecord()" /> 
                     </div>
                 </form>
             </div>
