--- a/es6/index.html
+++ b/es6/index.html
@@ -4,9 +4,9 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>ES6 Test</title>
-        <script src="main.js" type="module"></script>
+        <script src="/src/main.js" type="module"></script>
 
-        <link rel="stylesheet" type="text/css" href="main.css">
+        <link rel="stylesheet" type="text/css" href="/src/main.css">
     </head>
     <body>
         <h2>ES6 Test</h2>
