--- a/es6/index.html
+++ b/es6/index.html
@@ -9,7 +9,11 @@
         <link rel="stylesheet" type="text/css" href="/src/main.css">
     </head>
     <body>
-        <h2>ES6 Test</h2>
+        <div class="flex controls">
+            <div><h2>ES6 Test</h2></div>
+            <div id="dark-toggle"><a>&#9681;</a></div>
+        </div>
+
         <div class="flex controls">
             <div><input type="button" id="addItem" value="Add Item" /></div>
             <div><input type="button" id="clearChecked" value="Clear Checked" /></div>
