--- a/requirements.html
+++ b/requirements.html
@@ -97,7 +97,7 @@
                 <tr><th>/records</th><td>GET</td><td>get records</td><td>array of records</td></tr>
                 <tr><th>/records</th><td>POST</td><td>add a record from post body</td><td>array of records</td></tr>
                 <tr><th>/categories</th><td>GET</td><td>get categories</td><td>array of categories</td></tr>
-                <tr><th>/items</th><td>GET</td><td>get items</td><td>array of items</td></tr>
+                <tr><th>/items</th><td>GET</td><td>get items by category</td><td>array of items</td></tr>
                 <tr><th>/check</th><td>GET</td><td>toggles a record's checked field to<br /> true or false by item name</td><td>array of records</td></tr>
                 <tr><th>/clear</th><td>GET</td><td>removes records where checked is true</td><td>array of records</td></tr>
             </tbody>
